--- a/src/app/components/board/board.html
+++ b/src/app/components/board/board.html
@@ -1,5 +1,3 @@
-<svg id="map" width="975" height="702.5">
-  <g transform="scale(0.5)">
-    <g id="map-hexes" transform="translate(50 37.5)"></g>
-  </g>
-</svg>
+<div id="board">
+  <app-map></app-map>
+</div>
