--- a/src/app/pages/game/game.scss
+++ b/src/app/pages/game/game.scss
@@ -1,7 +1,10 @@
 .game-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 20px;
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: center;
+  // align-items: flex-start;
+  // gap: 20px;
+  // height: 100%;
+  overflow: hidden;
+  height: 100%;
 }
