scaling works great

--- a/src/app/components/board/board.html
+++ b/src/app/components/board/board.html
@@ -1,3 +1,8 @@
-<div id="board">
-  <app-hex-map></app-hex-map>
+<div class="board-container">
+  <div class="board-top">
+    <app-stock-market></app-stock-market>
+  </div>
+  <div class="board-bottom">
+    <app-hex-map></app-hex-map>
+  </div>
 </div>
